package com.digiventure.ventnote.commons

object TestTags {
    // Pages test tags
    const val NOTES_PAGE = "notes_feature"
    const val NOTE_DETAIL_PAGE = "note_detail_page"
    const val NOTE_CREATION_PAGE = "note_creation_page"
    const val SHARE_PAGE = "share_page"
    const val TAG_MANAGER_PAGE = "tag_manager_page"

    // Appbar test tags
    const val TOP_APPBAR = "top_appbar"

    // Bottom sheet test tags
    const val BOTTOM_SHEET = "bottom_sheet"

    const val DELETE_ICON_BUTTON = "delete_icon_button"
    const val SORT_ICON_BUTTON = "sort_icon_button"
    const val CLOSE_SELECT_ICON_BUTTON = "close_select_icon_button"
    const val MENU_ICON_BUTTON = "menu_icon_button"
    const val TOP_APPBAR_TITLE = "top_appbar_title"
    const val TOP_APPBAR_TEXT_FIELD = "top_appbar_text_field"
    const val DROPDOWN_SELECT = "dropdown_select"
    const val SELECT_ALL_OPTION = "select_all_option"
    const val UNSELECT_ALL_OPTION = "unselect_all_option"
    const val SELECTED_COUNT_CONTAINER = "selected_count_container"
    const val HELP_ICON_BUTTON = "help_icon_button"

    // Nav drawer test tags
    const val NAV_DRAWER = "nav_drawer"
    const val RATE_APP_TILE = "rate_app_tile"
    const val MORE_APPS_TILE = "more_apps_tile"
    const val APP_VERSION_TILE = "app_version_tile"
    const val THEME_TILE = "theme_tile"
    const val COLOR_MODE_TILE = "color_mode_tile"
    const val BACKUP_TILE = "backup_tile"
...
    const val THEME_COLOR_PURPLE = "theme_color_purple"
    const val THEME_COLOR_CRIMSON = "theme_color_crimson"
    const val THEME_COLOR_CADMIUM_GREEN = "theme_color_cadmium_green"
    const val THEME_COLOR_COBALT_BLUE = "theme_color_cobalt_blue"

    // Note lists test tags
    const val ADD_NOTE_FAB = "add_note_fab"
    const val NOTE_RV = "note_rv"
    const val LOADING_DIALOG = "loading_dialog"
    const val CONFIRMATION_DIALOG = "confirmation_dialog"
    const val PIN_ICON_BUTTON = "pin_icon_button"

    // Dialog Button
    const val CONFIRM_BUTTON = "confirm_button"
    const val DISMISS_BUTTON = "dismiss_button"

    // Note Detail test tags
    const val EDIT_ICON_BUTTON = "edit_icon_button"
    const val SAVE_ICON_BUTTON = "save_icon_button"
    const val CANCEL_ICON_BUTTON = "cancel_icon_button"
    const val SHARE_ICON_BUTTON = "share_icon_button"
...
