...
    <string name="success">Success</string>
    <string name="update_success_text">The app is successfully updated, press confirm to restart</string>
    <string name="restore_confirmation_title">Restore Notes</string>
    <string name="restore_confirmation_description">Are you sure you want to restore this note? This will replace the existing note.</string>

    <!--  Button and clickable  -->
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
...
    <string name="refresh">Refresh</string>

    <!--  TextField placeholder  -->
    <string name="search_textField">Input title here</string>
    <string name="title_textField_input">Insert title</string>
    <string name="body_textField_input">Insert note</string>
    <string name="empty_note_title_placeholder">Title</string>
    <string name="empty_note_placeholder">Note</string>

    <!--  Label text  -->
    <string name="selected_text">Selected</string>
    <string name="note_detail">Note Detail</string>
    <string name="note_edit">Editing Note</string>
...
